# shopee_log_backend

./: Cargo.toml  config.toml  config.toml.example  readme.md
src/: cli.rs  controllers.rs  helpers.rs  lib.rs  main.rs  models.rs  routes.rs  system_service.rs  utils.rs
