[package]
name = "shopee_logs_collector"
version = "0.1.0"
authors = ["Shirshak <8097377+shirshak55@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name="logger"
path="src/bin/logger.rs"

[[bin]]
name="shopee_service"
path="src/bin/shopee_service.rs"


[dependencies]
warp = "0.2.4"
tokio = { version="0.2.22",features=["full"] }
tracing = "0.1.19"
tracing-subscriber = "0.2.11"
tracing-appender="0.1.1"
serde = { version = "1.0.115", features=["derive"] }
serde_json = "1.0.57"
time = "0.2.16"
clap = "2.33.3"
once_cell = "1.7.0"
toml="0.5.7"
ctrlc = "3.1.6"
duct = "0.13.4"
windows-service = "0.3"
winapi = { version = "0.3", features = ["errhandlingapi", "handleapi", "libloaderapi", "ntlsa", "synchapi", "tlhelp32", "winbase", "winerror", "winuser"] }
